// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast component should match snapshot 1`] = `
<div>
  <div
    class="css-1vixhij"
    style="height: 0px;"
  >
    <i
      class="material-icons css-1mkw5fx-Icon"
    >
      check_circle
    </i>
    <div
      class="css-18u318"
    >
      test
    </div>
    <div
      class="css-1jhfx10"
    >
      test
    </div>
    <i
      class="material-icons css-1w1snbv-Icon"
    >
      close
    </i>
  </div>
</div>
`;

exports[`Toast component should match snapshot when information 1`] = `
<div>
  <div
    class="css-1ock57z"
    style="height: 0px;"
  >
    <i
      class="material-icons css-ry93ki-Icon"
    >
      info
    </i>
    <div
      class="css-1fzghdf"
    >
      test
    </div>
    <div
      class="css-1jhfx10"
    >
      test
    </div>
    <i
      class="material-icons css-1w1snbv-Icon"
    >
      close
    </i>
  </div>
</div>
`;
